Add complete schedule search API
